# rules_rust_prost_example

./: .gitignore  Cargo.toml  README.md  WORKSPACE.bazel
code/server/: BUILD.bazel  Cargo.toml
code/server/src/: main.rs
schema/echo/: BUILD.bazel  echo.proto
toolchains/: BUILD.bazel
